kubernetes/hapi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi
spec:
  selector:
    app: hapi
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hapi
  name: hapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hapi
  template:
    metadata:
      labels:
        app: hapi
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_HAPI}:${VERSION}
          name: hapi
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: '1'
