kubernetes/hapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaccine-traceability-hapi
  name: vaccine-traceability-hapi
spec:
  ports:
    - name: hapi
      port: 9090
      targetPort: 9090
  selector:
    app: vaccine-traceability-hapi
