kubernetes/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaccine-traceability-hasura
  name: vaccine-traceability-hasura
spec:
  ports:
    - name: hasura
      port: 8080
      targetPort: 8080
  selector:
    app: vaccine-traceability-hasura
