kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaccine-traceability-postgres
  name: vaccine-traceability-postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: vaccine-traceability-postgres
