kubernetes/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
    version: ${VERSION}
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: ${VERSION}
  template:
    metadata:
      labels:
        app: postgres
        version: ${VERSION}
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: postgres:11.5-alpine
          imagePullPolicy: "Always"
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: inmutrust
        resources:
          requests:
            storage: 100Gi
