kubernetes/wallet-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wallet
  name: wallet
spec:
  ports:
    - name: wallet
      port: 8888
      targetPort: 8888
  selector:
    app: wallet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wallet
    version: ${VERSION}
  name: wallet
spec:
  serviceName: wallet
  replicas: 1
  selector:
    matchLabels:
      app: wallet
      version: ${VERSION}
  template:
    metadata:
      labels:
        app: wallet
        version: ${VERSION}
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_WALLET}:${VERSION}
          imagePullPolicy: "Always"
          name: "wallet"
          ports:
            - containerPort: 8888
          volumeMounts:
            - mountPath: /opt/application/data
              name: wallet-data
              subPath: data
            - mountPath: /opt/application/seeds
              name: wallet-seeds
      restartPolicy: Always
      volumes:
        - name: wallet-seeds
          configMap:
            name: wallet-seeds
  volumeClaimTemplates:
    - metadata:
        name: wallet-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: inmutrust
        resources:
          requests:
            storage: 50Gi
