kubernetes/inmutrust-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${INGRESS_HOST}`)
      services:
        - kind: Service
          name: webapp
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hasura-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${INGRESS_GRAPHQL_HOST}`)
      services:
        - kind: Service
          name: hasura
          port: 8080
